--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -10,11 +10,9 @@
      "output_type": "stream",
      "text": [
       "Chương trình sẽ bắt đầu sau 5 giây...\n",
-      "Ký tự tiếp theo là xuống dòng, dừng lại 0.5 giây...\n",
-      "Ký tự tiếp theo là xuống dòng, dừng lại 0.5 giây...\n",
-      "Ký tự tiếp theo là xuống dòng, dừng lại 0.5 giây...\n",
-      "Ký tự tiếp theo là xuống dòng, dừng lại 0.5 giây...\n",
-      "Ký tự tiếp theo là xuống dòng, dừng lại 0.5 giây...\n"
+      "Hoàn thành gõ văn bản!\n",
+      "Lặp lại từ phần sau `$loop$`...\n",
+      "Chương trình sẽ bắt đầu sau 5 giây...\n"
      ]
     },
     {
@@ -24,11 +22,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[33], line 104\u001b[0m\n\u001b[0;32m    102\u001b[0m max_duration \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m285\u001b[39m\n\u001b[0;32m    103\u001b[0m delay_time \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m0.06\u001b[39m, \u001b[38;5;241m0.08\u001b[39m)\n\u001b[1;32m--> 104\u001b[0m \u001b[43mauto_type_from_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelay\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdelay_time\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrepeat\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merror_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.02\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_duration\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_duration\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_newline\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[33], line 83\u001b[0m, in \u001b[0;36mauto_type_from_file\u001b[1;34m(file_path, delay, repeat, error_rate, max_duration, ignore_newline)\u001b[0m\n\u001b[0;32m     80\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m     82\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m---> 83\u001b[0m     \u001b[43mauto_type_with_pause\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfull_content\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelay\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_newline\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_newline\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merror_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merror_rate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     85\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m repeat:\n\u001b[0;32m     86\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[33], line 38\u001b[0m, in \u001b[0;36mauto_type_with_pause\u001b[1;34m(text, delay, pause_duration, ignore_newline, error_rate)\u001b[0m\n\u001b[0;32m     36\u001b[0m         pyautogui\u001b[38;5;241m.\u001b[39mtypewrite(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m, interval\u001b[38;5;241m=\u001b[39mdelay)\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 38\u001b[0m     \u001b[43mpyautogui\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtypewrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchar\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minterval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdelay\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     41\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(delay)\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Nếu gặp xuống dòng mà không bỏ qua, dừng một lúc\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\thong\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyautogui\\__init__.py:595\u001b[0m, in \u001b[0;36m_genericPyAutoGUIChecks.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    593\u001b[0m failSafeCheck()\n\u001b[0;32m    594\u001b[0m returnVal \u001b[38;5;241m=\u001b[39m wrappedFunction(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m--> 595\u001b[0m \u001b[43m_handlePause\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m_pause\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    596\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m returnVal\n",
-      "File \u001b[1;32mc:\\Users\\thong\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pyautogui\\__init__.py:639\u001b[0m, in \u001b[0;36m_handlePause\u001b[1;34m(_pause)\u001b[0m\n\u001b[0;32m    637\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _pause:\n\u001b[0;32m    638\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(PAUSE, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(PAUSE, \u001b[38;5;28mfloat\u001b[39m)\n\u001b[1;32m--> 639\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPAUSE\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[28], line 104\u001b[0m\n\u001b[0;32m    102\u001b[0m max_duration \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m285\u001b[39m\n\u001b[0;32m    103\u001b[0m delay_time \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m0.07\u001b[39m, \u001b[38;5;241m0.09\u001b[39m)\n\u001b[1;32m--> 104\u001b[0m \u001b[43mauto_type_from_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelay\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdelay_time\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrepeat\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merror_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.05\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_duration\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_duration\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_newline\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[28], line 95\u001b[0m, in \u001b[0;36mauto_type_from_file\u001b[1;34m(file_path, delay, repeat, error_rate, max_duration, ignore_newline)\u001b[0m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;66;03m# Gõ lại nhưng chỉ từ phần sau \"$loop$\"\u001b[39;00m\n\u001b[0;32m     94\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLặp lại từ phần sau `$loop$`...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 95\u001b[0m \u001b[43mauto_type_with_pause\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mloop_content\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelay\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_newline\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_newline\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merror_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merror_rate\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[28], line 41\u001b[0m, in \u001b[0;36mauto_type_with_pause\u001b[1;34m(text, delay, pause_duration, ignore_newline, error_rate)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     38\u001b[0m     pyautogui\u001b[38;5;241m.\u001b[39mtypewrite(char, interval\u001b[38;5;241m=\u001b[39mdelay)\n\u001b[1;32m---> 41\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdelay\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Nếu gặp xuống dòng mà không bỏ qua, dừng một lúc\u001b[39;00m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ignore_newline \u001b[38;5;129;01mand\u001b[39;00m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(text) \u001b[38;5;129;01mand\u001b[39;00m text[i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m:\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -56,7 +52,7 @@
     "            continue\n",
     "\n",
     "        # Giả lập lỗi gõ sai\n",
-    "        if random.random() < error_rate:\n",
+    "        if random.random() < error_rate and char.isalpha() and char.islower():\n",
     "            wrong_char = random.choice(\"abcdefghijklmnopqrstuvwxyz\")  # Chọn ngẫu nhiên ký tự sai\n",
     "            pyautogui.typewrite(wrong_char, interval=delay)\n",
     "            # pyautogui.typewrite([\"backspace\"])  # Xóa ký tự sai\n",
@@ -131,14 +127,35 @@
     "        auto_type_with_pause(' ' + loop_content, delay, ignore_newline=ignore_newline, error_rate=error_rate)\n",
     "\n",
     "# Đường dẫn file cần gõ\n",
-    "file_path = r\"C:\\Users\\thong\\workplace\\IUH\\3RDYEARCOLLEGE\\semester-2\\Ki_Nang_Su_Dung_Ban_Phim\\TypingMaster\\lessons\\uk7qwert03051text2.txt\"\n",
+    "file_path = r\"C:\\Users\\thong\\workplace\\IUH\\3RDYEARCOLLEGE\\semester-2\\Ki_Nang_Su_Dung_Ban_Phim\\TypingMaster\\lessons\\uk7qwert05012key2.txt\"\n",
     "\n",
     "# Chạy với các thông số tùy chỉnh\n",
     "# max_duration = random.randint(180, 210)\n",
     "max_duration = 285\n",
-    "delay_time = random.uniform(0.06, 0.08)\n",
-    "auto_type_from_file(file_path, delay=delay_time, repeat=True, error_rate=0.02, max_duration=max_duration, ignore_newline=False)\n"
+    "delay_time = random.uniform(0.07, 0.09)\n",
+    "auto_type_from_file(file_path, delay=delay_time, repeat=True, error_rate=0.05, max_duration=max_duration, ignore_newline=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
